--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,3 +13,131 @@ body {
   line-height: 1.5;
   color: #333;
 }
+
+/* section */
+.section {
+  padding: 30px 15px;
+}
+.section.section-feature-background {
+  background: #efefef;
+}
+.section-headline {
+  text-align: center;
+  font-size: 40px;
+  font-weight: bold;
+  margin: 0 0 40px 0;
+}
+
+/* about */
+.about {
+  margin: 0;
+  display: flex;
+}
+.about-caption {
+  padding-left: 15px;
+}
+.about-headline {
+  margin: 0 0 20px 0;
+  font-size: 30px;
+}
+/* .about-description { */
+
+.grid {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.grid-item {
+  list-style: none; /* liの箇条書き開始の丸を消す */
+}
+.grid-col-2 > .grid-item {
+  width: 50%;
+}
+.grid-col-3 > .grid-item {
+  width: 33%;
+}
+.grid-col-4 > .grid-item {
+  width: 25%;
+}
+
+.feature {
+  text-align: center;
+  padding: 0 15px;
+}
+.feature-healine {
+  font-weight: bold;
+  margin: 0 0 20px;
+}
+.feature-img {
+  margin: 5px 0 20px;
+}
+.feature-img img {
+  width: 100px;
+  height: 100px;
+}
+.feature-description {
+  margin: 0;
+  text-align: left;
+}
+
+/* card */
+.card {
+  padding: 0 10px;
+}
+.card-link {
+  display: block;
+  color: #333;
+  text-decoration: none;
+  position: relative;
+  transition: background-color 0.4s;
+}
+.card-link:hover {
+  background-color: #eee;
+}
+.card-label {
+  position: absolute;
+  top: 2px;
+  left: 2px;
+  background-color: #999;
+  color: #fff;
+  /* display: block; */
+  padding: 5px 10px;
+  font-size: 12px;
+}
+.card-image {
+  width: 100%;
+  height: auto;
+}
+.card-info {
+  padding: 5px 10px;
+}
+/* .card-time {} */
+.card-headline {
+  margin: 0;
+}
+.card-description {
+  margin: 0;
+}
+
+/* avatar */
+.avatar {
+  display: flex;
+  align-items: center;
+  flex-direction: row-reverse;
+  justify-content: start;
+  /* padding: 10px; */
+}
+.avatar-name {
+  font-weight: bold;
+  padding-left: 15px;
+}
+.avatar-image {
+  margin: 0;
+  border-radius: 50%;
+}
+
+.avatar-image img {
+  border-radius: 50%;
+}
