--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,12 +13,19 @@ body {
   line-height: 1.5;
   color: #333;
 }
+label,
+input,
+textarea,
+select,
+button {
+  cursor: pointer;
+}
 
 /* section */
 .section {
   padding: 30px 15px;
 }
-.section.section-feature-background {
+.section.secondary {
   background: #efefef;
 }
 .section-headline {
@@ -26,6 +33,10 @@ body {
   font-size: 40px;
   font-weight: bold;
   margin: 0 0 40px 0;
+}
+.section-button {
+  margin-top: 40px;
+  text-align: center;
 }
 
 /* about */
@@ -129,6 +140,7 @@ body {
   justify-content: start;
   /* padding: 10px; */
 }
+
 .avatar-name {
   font-weight: bold;
   padding-left: 15px;
@@ -140,4 +152,74 @@ body {
 
 .avatar-image img {
   border-radius: 50%;
+}
+
+/* button */
+.button {
+  display: inline-block;
+  color: #fff;
+  font-weight: bold;
+  background-color: #333;
+  text-align: center;
+  padding: 15px 60px;
+  text-decoration: none;
+  border-radius: 5px;
+  box-shadow: 3px 5px 0 #bbb;
+  transition: box-shadow 0.3s;
+  border: none;
+}
+.button:hover {
+  box-shadow: 0px 0px 0 #bbb;
+}
+.button.button-submission {
+  background: #92d3ca;
+}
+
+.select {
+  border-radius: 5px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  min-width: 400px;
+}
+.input {
+  border-radius: 5px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  min-width: 400px;
+}
+.radio {
+  padding: 5px;
+}
+.textarea {
+  border-radius: 5px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  min-width: 400px;
+  min-height: 100px;
+}
+
+/* form */
+.form-table {
+  margin: 0 auto;
+}
+.form-table th {
+  padding: 10px;
+  text-align: left;
+}
+.form-table td {
+  padding: 10px;
+}
+.form-button {
+  margin-top: 20px;
+  text-align: center;
+}
+
+/* works */
+.works {
+  margin: 40px 0;
+  padding: 20px;
+  text-align: center;
+}
+.works > img {
+  margin: 0 15px;
 }
